# windows-playground

./: README.md  stack.yaml  windows-playground.cabal
native/: Clipboard.cpp  Clipboard.h
